# tester

./: .gitignore  README.md
addon/: CMakeLists.txt  MCPServer.cpp  MCPServer.h  README.md  appearanceparser.cpp  appearanceparser.h  chars.cpp  chars.h  corestrings.cpp  corestrings.h  export.cpp  extender.cpp  extender.h  files.cpp  files.h  inotify.cpp  json.cpp  json.h  metadata.cpp  metadata.h  regex.cpp  regex.h  root.cpp  root.h  shooter.cpp  shooter.h  sql.cpp  sql.h  tooltips.cpp  tooltips.h  tooltips_designer.cpp  tooltips_designer.h  tooltips_internal.h  transform.cpp  transform.h  types.h  watcher.cpp  watcher.h
addon.client/: CMakeLists.txt  chars.cpp  corestrings.cpp  export.cpp  extender.cpp  extender.def  extender.h  httpServer.cpp  httpServer.h
addon.client/1c/: addindefbase.h
addon.client/tests/: core.cpp
addon.vscode/: README.md  package-lock.json  package.json
addon/1c/: componentbase.h
addon/tests/: core.cpp  mcp_runner.cpp  watcher.cpp
addon/tests/cyrillic_designer/: Configuration.xml
addon/tests/cyrillic_designer/Documents/: ПлатежноеПоручение.xml
addon/tests/cyrillic_designer/Documents/ПлатежноеПоручение/Forms/ФормаДокумента/Ext/: Form.xml
assistant/: .gitignore  .mcp.json  AGENTS.md
assistant/.agents/skills/choose-value/: SKILL.md
assistant/.agents/skills/runner-core/: SKILL.md
assistant/.agents/skills/search-in-list/: SKILL.md
assistant/.codex/: config.toml
assistant/tester/: 001_main_menu.bsl  002_open_reconciliation_list.bsl  003_create_act.bsl  004_choose_counterparty.bsl  005_search_counterparty.bsl
doc/: .gitignore  mkdocs.yml
doc/docs/: ai.md  api.md  apiAIen.md  apiAIru.md  applications.md  businesslogic.md  chrono.md  faqcicd.md  faqinterface.md  faqtesting.md  faqtheory.md  git.md  implementation.md  index.md  jobs.md  philosophy.md  releases.md  scenarios.md  screenshots.md  start.md  vscode.md  webclient.md
doc/docs/id/: header.md  title.md
tester/: .project
tester/src/Catalogs/ApplicationVersions/: ApplicationVersions.mdo
tester/src/Catalogs/Applications/: Applications.mdo
tester/src/Catalogs/ErrorLog/: ErrorLog.mdo
tester/src/Catalogs/Exchange/: Exchange.mdo
tester/src/Catalogs/ReportSettings/: ReportSettings.mdo
tester/src/Catalogs/Scenarios/: ManagerModule.bsl  ObjectModule.bsl  Scenarios.mdo
tester/src/Catalogs/Sessions/: Sessions.mdo
tester/src/CommonCommands/CurrentApplication/: CurrentApplication.mdo
tester/src/CommonCommands/DownloadMeta/: DownloadMeta.mdo
tester/src/CommonCommands/DownloadWorker/: DownloadWorker.mdo
tester/src/CommonCommands/Help/: Help.mdo
tester/src/CommonForms/Debugger/: Form.form
tester/src/CommonForms/Filling/: Filling.mdo  Form.form  Module.bsl
tester/src/CommonForms/Progress/: Form.form
tester/src/CommonForms/Report/: ConditionalAppearance.dcssca  Form.form  Module.bsl  Report.mdo
tester/src/CommonForms/Screenshot/: Form.form
tester/src/CommonForms/Settings/: Form.form  Module.bsl
tester/src/CommonForms/SyntaxPassed/: Form.form
tester/src/CommonModules/Appearance/: Module.bsl
tester/src/CommonModules/CoreExtension/: CoreExtension.mdo  Module.bsl
tester/src/CommonModules/CoreLibrary/: Module.bsl
tester/src/CommonModules/DC/: Module.bsl
tester/src/CommonModules/Debugger/: Module.bsl
tester/src/Configuration/: Configuration.mdo  MainSectionCommandInterface.cmi  ManagedApplicationModule.bsl  SessionModule.bsl
(+186 files in other folders)
